--- a/index.htm
+++ b/index.htm
@@ -36,5 +36,6 @@ au contenu. La hauteur de la cellule s'ajustera au contenu. </section>
             <footer class="box footer">Footer</footer>
         </main>
     </div>
+    <script type='module' src='./module_js/application.js'></script>
 </body>
 </html>
