--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     
     <title>Exercice 4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css" />
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css" />-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 
 </head>
@@ -24,7 +24,7 @@
         <a href="#">BOUTON 6</a>
     </nav> <!-- fin menu -->
         <main class="conteneur">
-            <header class="box header">Header</header>
+            <header class="box header"></header>
             <aside class="box sidebar">Sidebar</aside>
             <aside class="box sidebar2">Sidebar 2</aside>
             <section class="box content">Contenu
