Ajout de vraies catégories de page pour le menu

--- a/index.htm
+++ b/index.htm
@@ -16,12 +16,12 @@
 <label for="chkBoutonBurger" class="boutonBurger"></label>
 <div class="global">
 <nav class="menu">
-        <a href="#">BOUTON 1</a>
-        <a href="#">BOUTON 2</a>
-        <a href="#">BOUTON 3</a>
-        <a href="#">BOUTON 4</a>
-        <a href="#">BOUTON 5</a>
-        <a href="#">BOUTON 6</a>
+        <a href="#">Accueil</a>
+        <a href="#">À propos</a>
+        <a href="#">Photos</a>
+        <a href="#">Notre équipe</a>
+        <a href="#">Événements</a>
+        <a href="#">Nous contacter</a>
     </nav> <!-- fin menu -->
         <main class="conteneur">
             <header class="box header"></header>
